# Data-structures

./: CMakeLists.txt  main.cpp
BTree/: BTree.cpp  BTree.h
Binary tree problems/: branches sum.cpp  largest value.cpp  treeFlipping.cpp
BinaryTree/: AVL.cpp  AVL.h  BST.cpp  BST.h  binaryTree.cpp  binaryTree.h
Graph/: graphType.cpp  graphType.h  toplogical.cpp  toplogical.h  weightedGraphType.cpp  weightedGraphType.h
Hash table/: hashT.cpp  hashT.h
Queue/: queueArr.cpp  queueArr.h  queueLinked.cpp  queueLinked.h
Stack/: stackArr.cpp  stackArr.h  stackLinked.cpp  stackLinked.h
SuffixArray/: SuffixArray.cpp  SuffixArray.h
linkedList/: list.cpp  list.h
suffixTrie/: Node.cpp  Node.h  TrieNode.cpp  TrieNode.h  list.cpp  list.h  suffixTrie.cpp  suffixTrie.h
